# lit-mod

./: .codespellrc  .gitignore  Cargo.toml  LICENCE.md  README.md
.github/: rust.json
.github/workflows/: check.yml
src/: lib.rs  lines.rs  remove_lines.rs  replace.rs  slice.rs  util.rs
tests/lines/: test1.pass.rs  test2.pass.rs  test3.pass.rs  test_missing_slice.fail.rs  test_missing_slice.fail.stderr
tests/remove_lines/: test1.pass.rs  test2.pass.rs  test3.pass.rs  test_missing_slice.fail.rs  test_missing_slice.fail.stderr
tests/replace/: test_remove.pass.rs  test_replace.fail.rs  test_replace.fail.stderr  test_replace.pass.rs
tests/slice/: test1.pass.rs  test2.pass.rs  test3.pass.rs  test_missing_slice.fail.rs  test_missing_slice.fail.stderr
